@@ -82,6 +82,9 @@ Version 2.0-dev (CVS)
   OGR and fixed reading/writing support for these types. (Bug 1948 and 
   GDAL ticket #2585)
 
+- Fixed threading issue (static buffer) in Date and DateTime code (GDAL 
+  ticket #1883)
+
 - Set m_nCurFeatureId=-1 in TABSeamless::ResetReading() to solve problem
   when doing multiple seamless table scans with a spatial filter (bug 2017)
 
@@ -92,6 +95,7 @@ Version 2.0-dev (CVS)
 
 - Fixed: mitab mif/mid importer fails when a Text geometry have an 
   empty text value (bug 1978)
+
 
 Version 1.7.0-beta1 (2007-02-29)
 --------------------------------
@@ -110,7 +114,6 @@ Version 1.7.0-beta1 (2007-02-29)
 - Fixed the internal compressed coordinate range detection test to prevent
   possible overflow of the compressed integer coordinate values leading
   to some coordinate errors in very rare cases while writing to TAB (bug 1854) 
-
 
 Version 1.6.4 (2007-12-10)
 --------------------------
@@ -954,5 +957,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.231 2009-03-10 13:50:02 aboudreault Exp $
+$Id: HISTORY.TXT,v 1.232 2009-06-08 20:30:46 dmorissette Exp $
 ------------
